# badge-2024-software

./: .gitmodules  Dockerfile  esp_idf_project_configuration.json  sasppu.code-workspace
.github/workflows/: build.yml
components/flow3r_bsp/: flow3r_bsp.h  flow3r_bsp_display.c  flow3r_bsp_gc9a01.c  flow3r_bsp_gc9a01.h
components/sasppu/: .gitignore  CMakeLists.txt  idf_component.yml  lcd_qemu_rgb_panel_main.c  sasppu.c  sasppu.code-workspace  sasppu.h  sasppu_fast.S  sasppu_generated.py  sasppu_help.c  sasppu_help.h  sasppu_internal.h  sasppu_macimpl_handle_background.h  sasppu_macimpl_handle_cmath.h  sasppu_macimpl_handle_scanline.h  sasppu_macimpl_handle_sprite.h  sasppu_macimpl_handle_window.h  sasppu_render.c
components/sasppu/font/: export_font.py  font_metadata.h
components/sasppu/include/private/sasppu/macimpl/: cmath.h
components/sasppu/include/public/sasppu/: help.h
components/sasppu/sasppu-emu/: Cargo.toml
components/sasppu/sasppu-emu/src/: main.rs
components/sasppu/sasppu-sys/src/: lib.rs
components/sasppu/src/: help.c
drivers/: micropython.cmake
drivers/gc9a01/: display.c  display.h
drivers/sasppu/: .gitignore  micropython.cmake  sasppu_background.c  sasppu_background.h  sasppu_cmath_state.c  sasppu_cmath_state.h  sasppu_fast.S  sasppu_fast.h  sasppu_gen.S  sasppu_generated.py  sasppu_global.c  sasppu_global.h  sasppu_main_state.c  sasppu_main_state.h  sasppu_map.h  sasppu_mpy.c  sasppu_mpy_help.c  sasppu_mpy_help.h  sasppu_oam.h  sasppu_sprite.c  sasppu_sprite.h  sasppu_tile.c  sasppu_tile.h  sasppu_windows.c  sasppu_windows.h
drivers/tildagon_helpers/: tildagon_helpers.c
modules/: app.py  critical.py  perf_timer.py  sasppu.mpy  tildagonos.py
modules/firmware_apps/: intro_app.py  patterninhibit.py
modules/lib/: simple_tildagon.py
modules/system/hexpansion/: app.py
modules/system/launcher/: app.py
modules/system/patterndisplay/: app.py
modules/system/scheduler/: __init__.py
patches/: micropython.diff
sasppu_test_cart/: app.py
scripts/: hard-reset.sh
sim/: run.py
sim/wasm/: .gitattributes  .gitignore  build.sh  ctx.wasm  sasppu.wasm  sasppu_wasm.c
tildagon/: manifest.py  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
